--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
     "@angular/platform-browser": "~13.1.0",
     "@angular/platform-browser-dynamic": "~13.1.0",
     "@angular/router": "~13.1.0",
+    "@ngneat/transloco": "4.1.1",
+    "@ngneat/transloco-locale": "4.0.0",
+    "@ngneat/transloco-messageformat": "4.0.0",
+    "@ngneat/transloco-preload-langs": "4.0.1",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
